--- a/styles/dark.css
+++ b/styles/dark.css
@@ -10,3 +10,7 @@
     чем стили в медиазапросе предпочтений пользователя
   */
 }
+
+:root.theme-dark {
+  /* Дублируем переменные для тёмной темы */
+}
