--- a/styles/style.css
+++ b/styles/style.css
@@ -3,3 +3,201 @@
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
 }
+
+.header {
+  position: relative;
+  display: grid;
+  grid-template-rows: repeat(3, min-content);
+  min-height: 768px;
+  padding-top: 20px;
+  background-image: url('../images/cover-image-dark.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.header::after {
+  content: '';
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  width: 25px;
+  height: 25px;
+  border: 1px solid rgba(219, 0, 255, 1);
+  border-width: 1px 1px 0 0; 
+}
+
+.header::before {
+  content: '';
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  width: 25px;
+  height: 25px;
+  border: 1px solid rgba(219, 0, 255, 1);
+  border-width: 0 0 1px 1px;
+}
+
+.header__theme-menu {
+  display: grid;
+  justify-content: center;
+}
+
+.header__theme-menu-list {
+  display: flex;
+  gap: 10px;
+  list-style-type: none;
+}
+
+.header__theme-menu-button {
+  width: 70px;
+  height: 26px;
+  border: 0;
+  padding: 0;
+  color: var(--color);
+  font-family: 'IBM Plex Mono', sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 18px;
+  text-align: center;
+  text-transform: lowercase;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.header__theme-menu-button:hover {
+  border: 1px solid var(--color);
+}
+
+.header__theme-menu-button:focus-visible {
+  border-width: 0 0 1px 0;
+  border-style: solid;
+  border-color: var(--color);
+  outline: 0;
+}
+
+.header__theme-menu-button_active {
+  border: 1px solid var(--color);
+  pointer-events: none;
+}
+
+.header__element_theme-dark {
+  position: absolute;
+  top: 20px;
+  right: 29px;
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  color: var(--color);
+  font-family: 'IBM Plex Mono', sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 25px;
+}
+
+.header__element_theme-dark::before {
+  content: '';
+  width: 9px;
+  height: 9px;
+  margin-left: 10px;
+  border-radius: 50%;
+  box-shadow: 0px 0px 4px 2px var(--color);
+  background-color: var(--color);
+}
+
+.header__title {
+  align-self: center;
+  margin-top: 273px;
+  color: rgba(219, 0, 255, 1);
+  font-family: 'IBM Plex Mono', sans-serif;
+  font-weight: 700;
+  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  line-height: 129.53px;
+  text-align: left;
+  text-shadow: 4px 4px 0 var(--color);
+}
+
+.header__text {
+  justify-self: end;
+  max-width: 491px;
+  margin-top: 114px;
+  margin-right: 20px;
+  overflow-wrap: break-word;
+  color: rgba(0, 0, 40, 1);
+  font-family: 'IBM Plex Mono', sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 23.4px;
+  text-align: left;
+}
+
+.title-decor {
+  background-color: var(--color);
+}
+
+
+/* 768*1024 */
+
+@media (width <= 768px) {
+  .header{
+    min-height: 1024px;
+  }
+
+  .header__theme-menu {
+    justify-content: end;
+    margin-top: 172px;
+    margin-right: 20px;
+  }
+
+  .header__theme-menu-list {
+    flex-direction: column;
+  }
+
+  .header__title {
+    margin-top: 173px;
+    line-height: 99px;
+  }
+
+  .header__text {
+    max-width: 364px;
+    margin-top: 162px;
+  }
+}
+
+/* 375*668 */
+
+@media (width <= 375px) {
+  .header{
+    min-height: 668px;
+  }
+
+  .header::after {
+    top: 10px;
+    right: 10px;; 
+  }
+  
+  .header::before {
+    bottom: 10px;
+    left: 10px;
+  }
+
+  .header__theme-menu {
+    margin-top: 55px;
+    margin-right: 10px;
+  }
+
+  .header__element_theme-dark {
+    top: 10px;
+    right: 19px;
+  }
+
+  .header__title {
+    margin: 65px 10px 0;
+    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  }
+
+  .header__text {
+    max-width: 355px;
+    margin: 50px auto 0;
+  }
+}
