--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,3 +2,7 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+
+:root {
+  --color: rgba(255, 0, 112, 1);
+}
