--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,16 +1,19 @@
-/*
-  Специально для тёмной темы при наличии класса,
-  здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 .page.theme_dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --title-color: rgba(219, 0, 255, 1);
+  --text-color: rgba(255, 0, 112, 1);
+  --background-color: rgba(255, 0, 112, 1);
+  --background-image : url('../images/cover-image-dark.png');
+  --display: flex;
+  --main-text: rgba(241, 178, 206, 1);
+  --main-color: rgba(0, 0, 40, 1);
 }
 
 :root.theme-dark {
-  /* Дублируем переменные для тёмной темы */
+  --title-color: rgba(219, 0, 255, 1);
+  --text-color: rgba(255, 0, 112, 1);
+  --background-color: rgba(255, 0, 112, 1);
+  --background-image : url('../images/cover-image-dark.png');
+  --display: flex;
+  --main-text: rgba(241, 178, 206, 1);
+  --main-color: rgba(0, 0, 40, 1);
 }
