--- a/styles/light.css
+++ b/styles/light.css
@@ -5,20 +5,37 @@
 */
 
 .page.theme_light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --title-color: rgba(255, 194, 230, 1);
+  --text-color : rgba(53, 52, 48, 1);
+  --background-color: rgba(255, 141, 203, 1);
+  --background-image : url('../images/cover-image-light.png');
+  --display: none;
+  --main-text: var(--text-color);
+  --main-color: rgba(255, 241, 247, 1);
 }
 
 :root.theme-light {
-  /* Переменные светлой темы */    
+  /* Переменные светлой темы */
+  --title-color: rgba(255, 194, 230, 1);
+  --text-color : rgba(53, 52, 48, 1);
+  --background-color: rgba(255, 141, 203, 1);
+  --background-image : url('../images/cover-image-light.png');
+  --display: none;
+  --main-text: var(--text-color);
+  --main-color: rgba(255, 241, 247, 1);
 }
 
 /* Остальные стили */
 
 @media (prefers-color-scheme: light) {
 :root {
-      /* Дублируем переменные светлой темы */    
+      /* Дублируем переменные светлой темы */ 
+      --title-color: rgba(255, 194, 230, 1);
+      --text-color : rgba(53, 52, 48, 1);
+      --background-color: rgba(255, 141, 203, 1);
+      --background-image : url('../images/cover-image-light.png');
+      --display: none;
+      --main-text: var(--text-color);
+      --main-color: rgba(255, 241, 247, 1);
   }
 }
