--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,8 +1,9 @@
-/*
-  Переменные для вашего проекта
-  и их переопределение под различные устройства
-*/
-
 :root {
-  --color: rgba(255, 0, 112, 1);
+  --title-color: rgba(219, 0, 255, 1);
+  --text-color: rgba(255, 0, 112, 1);
+  --background-color: rgba(255, 0, 112, 1);
+  --background-image : url('../images/cover-image-dark.png');
+  --display: flex;
+  --main-text: rgba(241, 178, 206, 1);
+  --main-color: rgba(0, 0, 40, 1);
 }
