Corrections of the reviewer's comments - 1

--- a/styles/dark.css
+++ b/styles/dark.css
@@ -3,9 +3,12 @@
   --text-color: rgba(255, 0, 112, 1);
   --background-color: rgba(255, 0, 112, 1);
   --background-image : url('../images/cover-image-dark.png');
-  --display: flex;
   --main-text: rgba(241, 178, 206, 1);
+  --border-color: rgba(255, 0, 112, 0.4);
   --main-color: rgba(0, 0, 40, 1);
+  .header__element_theme-dark {
+    display: flex;
+  }
 }
 
 :root.theme-dark {
@@ -13,7 +16,10 @@
   --text-color: rgba(255, 0, 112, 1);
   --background-color: rgba(255, 0, 112, 1);
   --background-image : url('../images/cover-image-dark.png');
-  --display: flex;
   --main-text: rgba(241, 178, 206, 1);
+  --border-color: rgba(255, 0, 112, 0.4);
   --main-color: rgba(0, 0, 40, 1);
+  .header__element_theme-dark {
+    display: flex;
+  }
 }
