--- a/styles/style.css
+++ b/styles/style.css
@@ -8,16 +8,12 @@
   position: relative;
   display: grid;
   grid-template-rows: repeat(3, min-content);
-  height: max(100vh, 668px);
-  padding-top: 20px;
+  min-height: max(100vh, 668px);
+  padding-block-start: 20px;
   background-image: var(--background-image);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-}
-
-.decorated-zone {
-  min-height: 768px;
 }
 
 .decorated-zone::after {
@@ -59,9 +55,9 @@
   border: 0;
   padding: 0;
   color: var(--text-color);
-  font-family: 'IBM Plex Mono', sans-serif;
-  font-weight: 400;
-  font-size: 18px;
+  font-family: var(--font-family);
+  font-weight: var(----font-normal);
+  font-size: var(--font-size);
   line-height: 18px;
   text-align: center;
   text-transform: lowercase;
@@ -70,7 +66,7 @@
 }
 
 .header__theme-menu-button:hover {
-  border: 1px solid var(--text-color);
+  border: 1px solid var(--border-color);
 }
 
 .header__theme-menu-button:focus-visible {
@@ -89,13 +85,13 @@
   position: absolute;
   top: 20px;
   right: 29px;
-  display: var(--display);
+  display: flex;
   flex-direction: row-reverse;
   align-items: center;
   color: var(--text-color);
-  font-family: 'IBM Plex Mono', sans-serif;
-  font-weight: 400;
-  font-size: 18px;
+  font-family: var(--font-family);
+  font-weight: var(----font-normal);
+  font-size: var(--font-size);
   line-height: 25px;
 }
 
@@ -103,7 +99,7 @@
   content: '';
   width: 9px;
   height: 9px;
-  margin-left: 10px;
+  margin-inline-start: 10px;
   border-radius: 50%;
   box-shadow: 0px 0px 4px 2px var(--text-color);
   background-color: var(--text-color);
@@ -111,10 +107,10 @@
 
 .header__title {
   align-self: center;
-  margin-top: 273px;
+  margin-block-start: 273px;
   color: var(--title-color);
-  font-family: 'IBM Plex Mono', sans-serif;
-  font-weight: 700;
+  font-family: var(--font-family);
+  font-weight: var(--font-bold);
   font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   line-height: 129.53px;
   text-align: left;
@@ -123,10 +119,14 @@
 
 .header__text {
   justify-self: end;
-  max-width: 491px;
-  margin-top: 114px;
-  margin-right: 20px;
-  overflow-wrap: break-word;
+  margin-inline-end: 20px;
+  margin-block-start: 114px;
+  color: rgba(0, 0, 40, 1);
+  font-family: var(--font-family);
+  font-weight: var(--font-bold);
+  font-size: var(--font-size);
+  line-height: 23.4px;
+  max-inline-size: 491px;
 }
 
 .main__grid {
@@ -137,9 +137,18 @@
 
 .main__title {
   color: var(--text-color);
-  font-family: 'IBM Plex Mono', sans-serif;
-  font-weight: 700;
-  font-size: 18px;
+  font-family: var(--font-family);
+  font-weight: var(--font-bold);
+  font-size: var(--font-size);
+  line-height: 23.4px;
+}
+
+.main__subtitle {
+  margin-block-end: 10px;
+  color: rgba(0, 0, 40, 1);
+  font-family: var(--font-family);
+  font-weight: var(--font-bold);
+  font-size: var(--font-size);
   line-height: 23.4px;
 }
 
@@ -149,9 +158,9 @@
 
 .main__text {
   color: var(--main-text);
-  font-family: 'IBM Plex Mono', sans-serif;
-  font-weight: 400;
-  font-size: 18px;
+  font-family: var(--font-family);
+  font-weight: var(--font-normal);
+  font-size: var(--font-size);
   line-height: 23.4px;
 }
 
@@ -161,7 +170,7 @@
 }
 
 .main__link:hover {
-  border-bottom: 1px solid var(--main-text);
+  border-block-end: 1px solid var(--main-text);
 }
 
 .main__link:focus {
@@ -170,16 +179,18 @@
 }
 
 .title-decor {
-  color: rgba(0, 0, 40, 1);
-  font-family: 'IBM Plex Mono', sans-serif;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 23.4px;
   background-color: var(--background-color);
 }
 
+.color__element_theme-dark {
+  color: rgba(0, 0, 40, 1);
+}
+
 .blog-focus {
-  margin: 60px 20px 80px;
+  margin-inline-start: 20px;
+  margin-inline-end: 20px;
+  margin-block-start: 60px;
+  margin-block-end: 80px;
 }
 
 .blog-focus__list {
@@ -187,16 +198,11 @@
   gap: 20px;
 }
 
-.blog-focus__subtitle {
-  margin-bottom: 10px;
-}
-
 .blog-concentration {
-  margin: 0 20px;
-}
-
-.blog-concentration__title {
-  margin-bottom: 20px;
+  display: grid;
+  gap: 20px;
+  margin-inline-start: 20px;
+  margin-inline-end: 20px;
 }
 
 .blog-concentration__list {
@@ -206,43 +212,43 @@
   gap: 20px;
 }
 
-.blog-concentration__subtitle {
-  margin-bottom: 10px;
-}
-
 .blog-goldfish {
-  margin: 80px 20px;
+  margin-inline-start: 20px;
+  margin-inline-end: 20px;
+  margin-block-start: 80px;
+  margin-block-end: 80px;
 }
 
-.blog-goldfish__content-text {
-  margin-bottom: 20px;
-}
-
-.blog-goldfish__list {
+.blog-goldfish__list, 
+.blog-goldfish__content {
   display: grid;
   gap: 20px;
 }
 
-.blog-goldfish__subtitle {
-  margin-bottom: 10px;
+.blog-goldfish__subsections {
+  margin-block-end: 10px;
+  color: rgba(0, 0, 40, 1);
+  font-family: var(--font-family);
+  font-weight: var(--font-bold);
+  font-size: var(--font-size);
+  line-height: 23.4px;
 }
 
 .gallery {
-  margin: 0 20px;
+  display: grid;
+  gap: 20px;
+  margin-inline-start: 20px;
+  margin-inline-end: 20px;
 }
 
-.gallery__title {
-  margin-bottom: 20px;
-}
-
-.gallery__container {
+.gallery__list {
   display: grid;
   grid-template-columns: repeat(3, minmax(min-content, max-content));
   grid-template-rows: 260px 315px 428px;
   grid-template-areas:
-    "gallery__block-1 gallery__block-1 gallery__block-2"
-    "gallery__block-3 gallery__block-4 gallery__block-2"
-    "gallery__block-3 gallery__block-5 gallery__block-5";
+    "item-1 item-1 item-2"
+    "item-3 item-4 item-2"
+    "item-3 item-5 item-5";
   justify-content: center;
   gap: 22px 20px;
 }
@@ -254,24 +260,24 @@
   object-position: center;
 }
 
-.gallery__block-1 {
-  grid-area: gallery__block-1;
+.gallery__item:nth-child(1) {
+  grid-area: item-1;
 }
 
-.gallery__block-2 {
-  grid-area: gallery__block-2;
+.gallery__item:nth-child(2) {
+  grid-area: item-2;
 }
 
-.gallery__block-3 {
-  grid-area: gallery__block-3;
+.gallery__item:nth-child(3) {
+  grid-area: item-3;
 }
 
-.gallery__block-4 {
-  grid-area: gallery__block-4;
+.gallery__item:nth-child(4) {
+  grid-area: item-4;
 }
 
-.gallery__block-5 {
-  grid-area: gallery__block-5;
+.gallery__item:nth-child(5) {
+  grid-area: item-5;
 }
 
 .footer {
@@ -279,14 +285,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: max(100vh, 668px);
-  margin-top: 60px;
+  min-height: max(100vh, 668px);
+  margin-block-start: 60px;
 }
 
 .footer__title {
   color: var(--title-color);
-  font-family: IBM Plex Mono;
-  font-weight: 700;
+  font-family: var(--font-family);
+  font-weight: var(--font-bold);
   font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   line-height: 129.53px;
   text-shadow: 2px 2px 0 var(--background-color);
@@ -295,14 +301,10 @@
 /* 768*1024 */
 
 @media (width <= 768px) {
-  .decorated-zone {
-    min-height: 1024px;
-  }
-
   .header__theme-menu {
     justify-content: end;
-    margin-top: 172px;
-    margin-right: 20px;
+    margin-inline-end: 20px;
+    margin-block-start: 172px;
   }
 
   .header__theme-menu-list {
@@ -310,13 +312,13 @@
   }
 
   .header__title {
-    margin-top: 173px;
+    margin-block-start: 173px;
     line-height: 99px;
   }
 
   .header__text {
-    max-width: 364px;
-    margin-top: 162px;
+    margin-block-start: 162px;
+    max-inline-size: 364px;
   }
 
   .main__grid {
@@ -333,7 +335,7 @@
     gap: 20px;
   }
 
-  .gallery__container {
+  .gallery__list {
     grid-template-rows: 192px 230px 318px;
     gap:20px;
   }
@@ -342,10 +344,6 @@
 /* 375*668 */
 
 @media (width <= 375px) {
-  .decorated-zone {
-    min-height: 668px;
-  }
-
   .decorated-zone::after {
     top: 10px;
     right: 10px;; 
@@ -357,8 +355,8 @@
   }
 
   .header__theme-menu {
-    margin-top: 55px;
-    margin-right: 10px;
+    margin-inline-end: 10px;
+    margin-block-start: 55px;
   }
 
   .header__element_theme-dark {
@@ -367,24 +365,36 @@
   }
 
   .header__title {
-    margin: 65px 10px 0;
+    margin-inline-start: 10px;
+    margin-inline-end: 10px;
+    margin-block-start: 65px;
     font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   }
 
   .header__text {
-    max-width: 355px;
-    margin: 50px auto 0;
+    margin-inline-start: 10px;
+    margin-inline-end: 10px;
+    margin-block-start: 50px;
+    max-inline-size: 355px;
   }
 
   .main__grid {
     grid-template-columns: none ;
     grid-template-rows: min-content min-content;
     gap: 20px;
-    margin: 40px 10px 50px;
+    margin-inline-start: 10px;
+    margin-inline-end: 10px;
+    margin-block-start: 40px;
+    margin-block-end: 50px;
   }
   
   .blog-concentration {
-    margin: 0 10px;
+    margin-inline-start: 10px;
+    margin-inline-end: 10px;
+  }
+
+  .main__title {
+    margin-block-end: 0;
   }
 
   .main__title_width {
@@ -392,31 +402,29 @@
   }
 
   .blog-goldfish {
-    padding-top: 10px;
+    padding-block-start: 10px;
   }
 
   .gallery {
-    margin: 0 10px;
+    gap: 10px;
+    margin-inline-start: 10px;
+    margin-inline-end: 10px;
   }
 
-  .gallery__title {
-    margin-bottom: 10px;
-  }
-
-  .gallery__container {
+  .gallery__list {
     grid-template-columns: 355px;
     grid-template-rows: 142px 355px 237px 355px 237px;
     grid-template-areas:
-    "gallery__block-1"
-    "gallery__block-2"
-    "gallery__block-3"
-    "gallery__block-4"
-    "gallery__block-5";
+    "item-1"
+    "item-2"
+    "item-3"
+    "item-4"
+    "item-5";
     gap: 10px;
   }
 
   .footer {
-    margin-top: 40px;
+    margin-block-start: 40px;
   }
 
   .footer__title {
