--- a/styles/variables.css
+++ b/styles/variables.css
@@ -3,7 +3,11 @@
   --text-color: rgba(255, 0, 112, 1);
   --background-color: rgba(255, 0, 112, 1);
   --background-image : url('../images/cover-image-dark.png');
-  --display: flex;
   --main-text: rgba(241, 178, 206, 1);
+  --border-color: rgba(255, 0, 112, 0.4);
   --main-color: rgba(0, 0, 40, 1);
+  --font-family: 'IBM Plex Mono', monospace;
+  --font-normal: 400;
+  --font-bold: 700;
+  --font-size: 18px;
 }
