--- a/styles/light.css
+++ b/styles/light.css
@@ -5,12 +5,12 @@
   --background-image : url('../images/cover-image-light.png');
   --main-text: var(--text-color);
   --main-color: rgba(255, 241, 247, 1);
-  .header__element_theme-dark {
-  display: none;
-  }
+  --text-color-dark: rgba(0, 0, 40, 1);
 }
 
-
+.page.theme_light .header__element_theme-dark {
+  display: none;
+}
 
 :root.theme-light {
   --title-color: rgba(255, 194, 230, 1);
@@ -20,9 +20,7 @@
   --main-text: var(--text-color);
   --border-color: rgba(50, 49, 45, 0.4);
   --main-color: rgba(255, 241, 247, 1);
-  .header__element_theme-dark {
-    display: none;
-  }
+  --text-color-dark: rgba(0, 0, 40, 1);
 }
 
 @media (prefers-color-scheme: light) {
@@ -34,8 +32,10 @@
     --main-text: var(--text-color);
     --border-color: rgba(50, 49, 45, 0.4);
     --main-color: rgba(255, 241, 247, 1);
-    .header__element_theme-dark {
-      display: none;
-    }
+    --text-color-dark: rgba(0, 0, 40, 1);
+  }
+
+  .header__element_theme-dark {
+    display: none;
   }
 }
