--- a/styles/variables.css
+++ b/styles/variables.css
@@ -6,6 +6,7 @@
   --main-text: rgba(241, 178, 206, 1);
   --border-color: rgba(255, 0, 112, 0.4);
   --main-color: rgba(0, 0, 40, 1);
+  --text-color-dark: rgba(0, 0, 40, 1);
   --font-family: 'IBM Plex Mono', monospace;
   --font-normal: 400;
   --font-bold: 700;
